--- a/src/css/gui.css
+++ b/src/css/gui.css
@@ -1,5 +1,77 @@
-#main_drawing_canvas {
+#html, #body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    width: 0;
+}
+
+#root_layout {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    width: 0;
+}
+
+#root_layout, #root_layout > * {
+    border: 1px solid black;
+}
+
+#sidebar {
+    position: absolute;
+    right: 0;
+    top: 80px;
+    width: 400px;
+    height: 100%;
+    background-color: red;
+    z-index: 100;
+}
+
+#status_bar {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 40px;
+    background-color: green;
+    z-index: 100;
+}
+
+#main_menu {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 80px;
+    background-color: blue;
+    z-index: 100;
+}
+
+#drawing_display {
+    position: absolute;
+    top: 80px;
+    left: 0;
+    width: calc(100% - 400px);
+    height: calc(100% - 40px - 80px);
+    background: lightgray;
+    z-index: 40;
+}
+
+canvas {
+    position: absolute;
+    top: 50%;
+    left: 50%;
     width: 800px;
     height: 600px;
-    border: 1px solid black;
+    margin-left: -400px;
+    margin-top: -300px;
+}
+
+#drawing_canvas {
+    border: 1px solid red;
+    z-index: 50;
+}
+
+#working_canvas {
+    border: 1px dashed green;
+    z-index: 60;
 }
