--- a/src/css/gui.css
+++ b/src/css/gui.css
@@ -96,6 +96,10 @@ canvas {
     z-index: 60;
 }
 
+#selection_canvas {
+    z-index: 70;
+}
+
 
 /******************************************************************
 /* Main menu
