Improve code by removing useless things, and fixed tests.

--- a/src/css/gui.css
+++ b/src/css/gui.css
@@ -11,7 +11,7 @@
     width: 100%;
     height: 100%;
     margin: 0;
-    width: 0;
+    padding: 0;
 }
 
 
@@ -23,7 +23,7 @@
     width: 100%;
     height: 100%;
     margin: 0;
-    width: 0;
+    padding: 0;
 }
 
 /* Debug border for main blocks */
