--- a/src/css/gui.css
+++ b/src/css/gui.css
@@ -18,8 +18,11 @@
 #html, #body {
     width: 100%;
     height: 100%;
+    min-width: 920px;
+    min-height: 600px;
     margin: 0;
     padding: 0;
+    overflow: hidden; /* Fix 1-2 pixel UI overflow in some browsers */
 }
 
 
@@ -32,7 +35,6 @@
     height: 100%;
     margin: 0;
     padding: 0;
-
     font-family: "Roboto";
     font-weight: 400;
     color: #F3F5F8;
@@ -47,7 +49,7 @@
     background-color: #4C555C;
     border-bottom: 2px solid #2A2E33;
     box-shadow: 0 0 10px #2A2A2A;
-    overflow: hidden;
+    clip: auto; /* In case of overflow... */
     z-index: 100;
 }
 
@@ -58,6 +60,7 @@
     width: calc(100% - 400px);
     height: calc(100% - 30px - 80px);
     background: #32383D;
+    overflow: auto;
     z-index: 40;
 }
 
