--- a/src/css/gui.css
+++ b/src/css/gui.css
@@ -276,7 +276,7 @@ canvas {
     display: inline-block;
     float: right;
     height: 40px;
-    width: 80px;
+    width: 120px;
     background-color: #8898A3;
     border: 2px solid #2A2E33;
     border-bottom-width: 4px;
@@ -295,7 +295,7 @@ canvas {
 }
 
 .parameters_field .parameter input[type="text"] {
-    min-width: 80px;
+    width: auto;
     padding: 5px;
     font-size: 1.1rem;
 }
@@ -324,12 +324,12 @@ canvas {
 
 .popup_container {
     position: absolute;
-    top: 50%;
+    bottom: 50%;
     left: 50%;
     width: 600px;
-    height: 250px;
+    min-height: 250px;
     margin-left: -300px;
-    margin-top: -125px;
+    margin-bottom: -125px;
     padding: 10px;
     background-color: #5D6870;
     border: 2px solid #2A2E33;
