--- a/src/css/gui.css
+++ b/src/css/gui.css
@@ -230,7 +230,7 @@ canvas {
 
 
 /******************************************************************
-/* Sidebar
+/* Parameters
 /*****************************************************************/
 
 /* Parameter fields */
