--- a/src/css/gui.css
+++ b/src/css/gui.css
@@ -438,3 +438,66 @@ canvas {
     border-right: none;
     border-left: 2px solid #2A2E33;
 }
+
+
+/******************************************************************
+/* History list
+/*****************************************************************/
+
+#history {
+    margin: 5px;
+    padding: 0;
+    min-height: 80px;
+    max-height: 300px;
+    background-color: #6E7B85;
+    border: 2px solid #2A2E33;
+    border-radius: 5px;
+    overflow-y: auto;
+}
+
+#history.empty {
+    display: none;
+}
+
+#history > h3 {
+    display: block;
+    width: 100%;
+    margin: 0;
+    padding: 5px 0;
+    background-color: #2A2E33;
+    font-size: 1.15rem;
+    font-weight: 700;
+    text-align: center;
+}
+
+.history_list {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+.history_step {
+    display: block;
+    width: 100%;
+    height: 30px;
+    margin: 0;
+    padding: 0 10px;
+    border-bottom: 2px solid #3B4148;
+    line-height: 28px;
+    vertical-align: middle;
+    overflow: hidden;
+    text-shadow: 0 0 1px #2A2E33;
+}
+
+.history_step:last-child {
+    border-bottom: none;
+}
+
+.history_step.canceled {
+    color: #B8BABC;
+    background-color: #5D6870;
+}
+
+.history_step:hover {
+    background-color: #8898A3;
+}
