--- a/src/css/gui.css
+++ b/src/css/gui.css
@@ -210,6 +210,7 @@ canvas {
 
 #tool_selection_menu .tool_button.selected,
 #tool_selection_menu .tool_button.selected:hover {
+    color: #B8BABC;
     background-color: #5D6870;
     box-shadow: none;
 }
@@ -253,9 +254,9 @@ canvas {
 /* Parameters */
 
 .parameters_field .parameter {
-    padding: 10px;
+    padding: 5px 10px;
     border-bottom: 2px solid #2A2E33;
-    line-height: 40px;
+    line-height: 30px;
     vertical-align: middle;
 }
 
@@ -270,14 +271,14 @@ canvas {
 
 .parameters_field .parameter label {
     display: inline-block;
-    font-size: 1.15rem;
+    font-size: 1.05rem;
     text-shadow: 0 0 1px #2A2E33;
 }
 
 .parameters_field .parameter input {
     display: inline-block;
     float: right;
-    height: 40px;
+    height: 30px;
     width: 120px;
     background-color: #8898A3;
     border: 2px solid #3B4148;
@@ -297,13 +298,13 @@ canvas {
 
 .parameters_field .parameter input[type="number"] {
     padding: 5px;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
 }
 
 .parameters_field .parameter input[type="text"] {
     width: auto;
     padding: 5px;
-    font-size: 1.1rem;
+    font-size: 1.05rem;
 }
 
 .parameters_field .parameter input[type="color"] {
