--- a/src/css/gui.css
+++ b/src/css/gui.css
@@ -250,6 +250,16 @@ canvas {
     display: none;
 }
 
+.parameters_field > h3 {
+    display: block;
+    width: 100%;
+    margin: 0;
+    padding: 5px 0;
+    background-color: #2A2E33;
+    font-size: 1.15rem;
+    font-weight: 700;
+    text-align: center;
+}
 
 /* Parameters */
 
