--- a/src/css/gui.css
+++ b/src/css/gui.css
@@ -93,6 +93,17 @@
     z-index: 100;
 }
 
+#tool_menu {
+    position: absolute;
+    left: 0;
+    top: 50%;
+    background-color: #5D6870;
+    border: 2px solid #2A2E33;
+    border-left: none;
+    border-radius: 0 5px 5px 0;
+    box-shadow: 0 0 6px #2A2A2A;
+    z-index: 75;
+}
 
 /******************************************************************
 /* Main canvases (drawing zone)
@@ -164,26 +175,20 @@ canvas {
 }
 
 
-/* Menus */
+/* Menu */
 
-#tool_selection_menu,
 #document_actions_menu {
     display: inline-block;
-    padding: 0 0 0 15px;
+    padding: 0 15px 0 15px;
     margin: 0;
     line-height: 80px;
     vertical-align: middle;
-}
-
-#document_actions_menu {
-    padding: 0 15px 0 15px;
     border-right: 2px solid #2A2E33;
 }
 
 
 /* Menus elements */
 
-#tool_selection_menu > li,
 #document_actions_menu > li {
     display: inline-block;
     margin: 0 15px 0 0;
@@ -191,12 +196,10 @@ canvas {
     list-style: none;
 }
 
-#tool_selection_menu > li:last-child,
 #document_actions_menu > li:last-child {
     margin: 0;
 }
 
-#tool_selection_menu .tool_button,
 #document_actions_menu .document_action_button {
     margin: 0;
     padding: 8px 8px 10px 8px;
@@ -210,21 +213,18 @@ canvas {
     animation: 250ms ease-in;
 }
 
-#tool_selection_menu .tool_button.selected,
 #tool_selection_menu .tool_button.selected:hover {
     color: #B8BABC;
     background-color: #5D6870;
     box-shadow: none;
 }
 
-#tool_selection_menu .tool_button:hover,
 #document_actions_menu .document_action_button:hover {
     padding: 8px;
     background-color: #6E7B85;
     box-shadow: none;
 }
 
-#tool_selection_menu .tool_button:disabled,
 #document_actions_menu .document_action_button:disabled {
     opacity: 0.5;
     box-shadow: none;
@@ -725,4 +725,68 @@ canvas {
 .layer_name_input::-moz-selection {
     background-color: #3B4148;
     text-shadow: none;
+}
+
+
+/******************************************************************
+/* Tool menu
+/*****************************************************************/
+
+#tool_menu > h3 {
+    display: block;
+    width: 100%;
+    margin: 0;
+    padding: 5px 0;
+    background-color: #2A2E33;
+    font-size: 1.15rem;
+    font-weight: 700;
+    text-align: center;
+}
+
+/* Tool selection menu */
+
+#tool_selection_menu {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+}
+
+#tool_selection_menu > li {
+    display: block;
+    margin: 5px;
+    padding: 0;
+    list-style: none;
+}
+
+#tool_selection_menu .tool_button {
+    margin: 0;
+    padding: 8px 8px 10px 8px;
+    background-color: #8898A3;
+    border: 2px solid #3B4148;
+    border-radius: 4px;
+    box-shadow: 0 -2px 0 0 #3B4148 inset;
+    font-weight: bold;
+    color: #F3F5F8;
+    text-shadow: 0 0 2px #1D2024;
+    animation: 250ms ease-in;
+}
+
+#tool_selection_menu .tool_button.selected {
+    color: #B8BABC;
+    background-color: #5D6870;
+    box-shadow: none;
+}
+
+#tool_selection_menu .tool_button:hover {
+    padding: 8px;
+    background-color: #6E7B85;
+    box-shadow: none;
+}
+
+#tool_selection_menu .tool_button:disabled {
+    opacity: 0.5;
+    box-shadow: none;
+
+    /* Do not override normal properties on hover */
+    background-color: #8898A3;
 }
