Added style reset CSS (using normalize.css).

--- a/src/css/gui.css
+++ b/src/css/gui.css
@@ -6,6 +6,9 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
 @import url('https://fonts.googleapis.com/css?family=Lobster');
 
+/* Style reset */
+@import "normalize.css";
+
 
 /******************************************************************
 /* Internal imports
