--- a/src/css/gui.css
+++ b/src/css/gui.css
@@ -33,6 +33,11 @@
     box-sizing: border-box;
 }
 
+/* Setup the root font size */
+html {
+    font-size: 16px; /* = 10px */
+}
+
 html, body {
     width: 100%;
     height: 100%;
