--- a/src/css/misc.css
+++ b/src/css/misc.css
@@ -50,7 +50,8 @@
     text-shadow: 0 0 1px #2A2E33;
 }
 
-.parameters_field .parameter input {
+.parameters_field .parameter input,
+.parameters_field .parameter select {
     display: inline-block;
     float: right;
     height: 30px;
